FP-1128 Для сервиса оплаты через внешнии запросы, добавлена проверка на закрытие операционного дня